react_webviews/src/internal_wealth_dashboard/mini-components/Style.scss
/* ... */
.iwd-disable-clear {
  opacity: 0.2;
  cursor: not-allowed;
}

//Autosuggest
.react-select-container {
  border: none;
  outline: none;
}

@media only screen and (min-width: 300px) and (max-width: 800px) {
  .iwd-legend-container {
    margin: 0 auto;
    align-items: center;

    .iwd-legend-child {
      width: 50%;

      .iwd-lc-header {
        flex-direction: column;
        justify-content: center;

        .iwd-lc-icon {
          width: 8px;
          height: 8px;
          margin-bottom: 10px;
          background: hsla(173, 59, 55, 1);
        }

        .iwd-lc-title {
          color: hsla(173, 59, 55, 1);
          margin-left: 0;
          text-transform: uppercase;
        }
      }

      .iwd-lc-value {
        text-align: center;
      }
    }
  }

  .iwd-holding-card {
    padding: $card-padding-mob; //TODO: reuse iwd-card
    height: 460px;
    width: 100%;
    flex: 0 1 48%;
    margin-right: 0;
    margin-bottom: 40px;
    box-shadow: none;

    .iwd-hc-title {
      span {
        font-size: 17px;
        line-height: 27px;
      }

      img {
        position: absolute;
        top: 20px;
        right: 20px;
      }
    }

    .iwd-hc-numbers {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      width: 100%;
      height: 45%;

      .iwd-hcn-item {
        .iwd-hcni-value {
          line-height: 27px;
        }
      }

      .iwd-hcn-item:nth-child(1) {
        margin-right: 60px;

        .iwd-hcni-value {
          font-size: 17px;
          line-height: 27px;
        }
      }

      .iwd-hcn-item-divider {
        display: none;
      }
    }

    .iwd-hc-more {
      right: 25px;
      bottom: 30px;
    }
  }
}

@media only screen and (max-width: 450px) {
  .iwd-statement-reports {
    margin-bottom: 40px;
  }

  .iwd-page.iwd-statements {
    overflow: hidden;
  }
  .iwd-statement-card {
    //flex: 1;
    width: 100%;
    margin: 0px;
    margin-bottom: 40px;
    padding: 40px;
  }
  .iwd-filter-mobile {
    overflow-y: auto;
    background: white;
    margin: 0 !important;
    font-family: 'Poppins', 'Roboto', sans-serif;

    .iwd-filter-mobile-container {
      position: relative;
      height: 100%;
      padding: 40px;
    }

    .iwd-filter-footer {
      display: flex;
      justify-content: space-around;
      align-items: center;
      width: 80%;

      margin: 30px auto 20px auto;
      .MuiButtonBase-root {
        border-radius: 6px;
        background-color: #4f2da6;
        height: 50px;
        padding: 13px 46px;
        box-sizing: border-box;

        .MuiButton-label {
          font-weight: bold;
          font-size: 15px;
          line-height: 24px;
          color: white;
        }
      }
    }

    .iwd-filter-mobile-section {
      margin-top: 40px;
      height: 95%;
      display: flex;
      flex-direction: column;
      //padding: $card-padding-mobile;

      .iwd-filter-head-container {
        justify-content: center;
        margin-top: 40px;
        margin-bottom: 40px;
        .iwd-filter-head {
          font-size: 17px;
          font-weight: 700;
          line-height: 27px;
          letter-spacing: 0em;
        }
      }

      .iwd-filter-footer {
        justify-content: space-evenly;
        align-items: center;
        width: 100%;

        .iwd-filter-clear {
          font-size: 15px;
          line-height: 24px;
          font-weight: normal;
          letter-spacing: unset;
          text-align: center;
          margin-right: 0;
          width: 40%;
        }
      }

      .MuiFormGroup-root {
        flex-direction: row;
      }

      .MuiFormGroup-root > label {
        flex: 0 50%;
      }
    }
  }

  // Statements Page
  .iwd-statements-container {
    margin-left: 0px;
    .iwd-transaction-search-container {
      .iwd-transaction-search {
        flex: 1;
      }
    }
  }

  .iwd-transaction-date-filter {
    display: flex;
    justify-content: space-between;
    width: 100%;
    align-items: center;
    flex-direction: column;
    margin-top: 20px;
    .iwd-transaction-date {
      display: flex;
      align-items: center;
      justify-content: space-between;
      width: 100%;
      margin-bottom: 10px;

      .iwd-date-text {
        font-family: Poppins;
        font-size: 13px;
        font-weight: 600;
        line-height: 24px;
        letter-spacing: 0em;
        text-align: left;
        color: #767e86;
        flex: 0.3;
        width: max-content;
      }
      .iwd-date-selector {
        flex: 1;
        max-width: 300px;
        color: #767e86;
        border-radius: 100px;
        background-color: rgba($primary, 0.05);
        .MuiFormControl-root {
          .MuiInput-input {
            text-align: left;
            padding-left: 20px;
            padding-right: 12px;
            color: #767e86;
          }

          .MuiInput-root.MuiInput-formControl.MuiInput-underline::before,
          .MuiInput-root.MuiInput-formControl.MuiInput-underline::after {
            border: none;
          }
        }
      }
    }
  }
  #iwd-page-header {
    #iwd-ph-left {
      width: 100%;
      overflow: hidden;
    }

    #iwd-ph-right {
      // float: right;
      position: relative;
    }
  }
}

.iwd-disable-clear {
  opacity: 0.2;
  cursor: not-allowed;
}

//Autosuggest

.react-select-container {
  border: none;
  outline: none;
}

// Date Range Picker

.iwd-date-range-picker {
  .rs-picker-daterange {
    background-color: rgba(31, 18, 65, 0.05);
    border-radius: 4px;
  }
}
.rs-picker-toggle-value,
.rs-picker-toggle-placeholder,
.rs-picker-toggle-caret {
  color: $primary !important;
}
.rs-calendar-table-cell-content {
  border-radius: 50% !important;
}
.rs-calendar-table-cell-is-today .rs-calendar-table-cell-content {
  border: 1px solid $primary;
}
.rs-calendar-table-cell-selected .rs-calendar-table-cell-content {
  border-color: $primary !important;
  background-color: $primary !important;
}
/* ... */

